--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,25 +42,15 @@ jobs:
         with:
           fetch-depth: 32
 
-      # JDK 11 is needed for the build.
+      # JDK 8 and 11 is needed for the build.
       # Search `maven-toolchains-plugin` usages for details.
-      - name: Setup JDK 11
+      - name: Setup JDK
         uses: actions/setup-java@1df8dbefe2a8cbc99770194893dd902763bee34b   # 3.9.0
         with:
           distribution: temurin
-          java-version: 11
-          java-package: jdk
-          architecture: x64
-          cache: maven
-
-      # JDK 8 is needed for the build, and it is the primary bytecode target.
-      # Hence, JDK 8 is set up after 11, so that JAVA_HOME used by Maven during build will point to 8.
-      - name: Setup JDK 8
-        uses: actions/setup-java@1df8dbefe2a8cbc99770194893dd902763bee34b   # 3.9.0
-        with:
-          distribution: temurin
-          java-version: 8
-          java-package: jdk
+          java-version: |
+            8
+            11
           architecture: x64
           cache: maven
 
@@ -69,13 +59,13 @@ jobs:
       #    For details, see: https://maven.apache.org/guides/mini/guide-reproducible-builds.html#how-to-test-my-maven-build-reproducibility
       # 2. `javadoc:javadoc-no-fork`, which is attached to the `site` goal
       - name: Build
-        timeout-minutes: 10
+        timeout-minutes: 60
         shell: bash
+        env:
+          JAVA_HOME: ${{ env.JAVA_HOME_8_X64 }}
         run: |
           ./mvnw \
             --show-version --batch-mode --errors --no-transfer-progress \
-            --global-toolchains ".github/workflows/maven-toolchains.xml" \
-            -DskipTests=true \
             clean install
 
       # `clean verify artifact:compare` is required to generate the build reproducibility report.
@@ -84,58 +74,32 @@ jobs:
         id: report-reproducible
         timeout-minutes: 10
         shell: bash
+        env:
+          JAVA_HOME: ${{ env.JAVA_HOME_8_X64 }}
         run: |
           ./mvnw \
             --show-version --batch-mode --errors --no-transfer-progress \
-            --global-toolchains ".github/workflows/maven-toolchains.xml" \
             -DskipTests=true \
-            clean verify artifact:compare || failed=1
-
-      # `artifact:compare` doesn't fail the build in case of a reproducibility problem.
-      # Below we manually check reproducibility build reports and fail the build, if necessary.
-      - name: Verify build reproducibility
-        shell: bash
-        run: |
-          for report_file in target/*.buildcompare **/target/*.buildcompare; do
-            if ! grep -q "^ko=0$" "$report_file"; then
-              echo "Spotted build reproducibility failure in \`$report_file\`:"
-              cat "$report_file"
-              failed=1
-            fi
-          done
-          if [ -n "$failed" ]; then
-            exit $failed
-          fi
+            clean package artifact:compare
 
       - name: Upload reproducibility failure context artifacts
-        if: failure() && steps.report-reproducible.outcome == 'failure'
-        uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce
+        if: failure()
+        uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce   # 3.1.2
         with:
-          name: reproducubility-failure-context-${{matrix.os}}
+          name: reproducibility-failure-context-${{matrix.os}}
           path: |
             **/target/*.buildcompare
             **/target/*.jar
             **/target/reference/*.jar
 
-      - name: Maven "verify"
-        timeout-minutes: 60
-        shell: bash
-        run: |
-          ./mvnw \
-            --show-version --batch-mode --errors --no-transfer-progress \
-            --global-toolchains ".github/workflows/maven-toolchains.xml" \
-            -DtrimStackTrace=false \
-            -Dsurefire.rerunFailingTestsCount=2 \
-            -Dlog4j2.junit.fileCleanerSleepPeriodMillis=1000 \
-            verify
-
-      - name: Maven "site"
+      - name: Build site
         timeout-minutes: 10
         shell: bash
+        env:
+          JAVA_HOME: ${{ env.JAVA_HOME_8_X64 }}
         run: |
           ./mvnw \
             --show-version --batch-mode --errors --no-transfer-progress \
-            --global-toolchains ".github/workflows/maven-toolchains.xml" \
             site
 
   merge:
@@ -169,30 +133,17 @@ jobs:
         with:
           fetch-depth: 32
 
-      # JDK 11 is needed for the build.
+      # JDK 8 and 11 are needed for the build.
       # Search `maven-toolchains-plugin` usages for details.
-      - name: Setup JDK 11
+      - name: Setup JDK
         uses: actions/setup-java@1df8dbefe2a8cbc99770194893dd902763bee34b   # 3.9.0
         with:
           distribution: temurin
-          java-version: 11
-          java-package: jdk
+          java-version: |
+            8
+            11
           architecture: x64
           cache: maven
-
-      # JDK 8 is needed for the build, and it is the primary bytecode target.
-      # Hence, JDK 8 is set up after 11, so that JAVA_HOME used by Maven during build will point to 8.
-      - name: Setup JDK 8
-        uses: actions/setup-java@1df8dbefe2a8cbc99770194893dd902763bee34b   # 3.9.0
-        with:
-          distribution: temurin
-          java-version: 8
-          java-package: jdk
-          architecture: x64
-          cache: maven
-
-      - name: Inspect environment
-        run: env | grep '^JAVA'
 
       - name: Inspect project version
         run: |
@@ -211,11 +162,11 @@ jobs:
         run: |
           ./mvnw \
             --show-version --batch-mode --errors --no-transfer-progress \
-            --global-toolchains ".github/workflows/maven-toolchains.xml" \
             --settings .github/workflows/maven-settings.xml \
             -Dgpg.skip=true \
             -DskipTests=true \
             package install:install deploy:deploy
         env:
+          JAVA_HOME: ${{ env.JAVA_HOME_8_X64 }}
           NEXUS_USER: ${{ secrets.NEXUS_USER }}
           NEXUS_PW: ${{ secrets.NEXUS_PW }}
