--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -60,36 +60,26 @@ jobs:
           # Prefix the list here with "+" to use these queries and those in the config file.
           # queries: ./path/to/local/query, your-org/your-repo/queries@main
 
-      # JDK 11 is needed for the build.
+      # JDK 8 and 11 is needed for the build.
       # Search `maven-toolchains-plugin` usages for details.
-      - name: Setup JDK 11
+      - name: Setup JDK
         uses: actions/setup-java@1df8dbefe2a8cbc99770194893dd902763bee34b   # 3.9.0
         with:
           distribution: temurin
-          java-version: 11
-          java-package: jdk
-          architecture: x64
-          cache: maven
-
-      # JDK 8 is needed for the build, and it is the primary bytecode target.
-      # Hence, JDK 8 is set up after 11, so that JAVA_HOME used by Maven during build will point to 8.
-      - name: Setup JDK 8
-        uses: actions/setup-java@1df8dbefe2a8cbc99770194893dd902763bee34b   # 3.9.0
-        with:
-          distribution: temurin
-          java-version: 8
-          java-package: jdk
-          architecture: x64
+          java-version: |
+            8
+            11
           cache: maven
 
       - name: Build with Maven
         timeout-minutes: 60
         shell: bash
+        env:
+          JAVA_HOME: ${{ env.JAVA_HOME_8_X64 }}
         run: |
           ./mvnw \
           --show-version --batch-mode --errors --no-transfer-progress \
-          -DskipTests \
-          --global-toolchains ".github/workflows/maven-toolchains.xml"
+          -DskipTests
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@959cbb7472c4d4ad70cdfe6f4976053fe48ab394    # 2.1.37
