--- a/.asf.yaml
+++ b/.asf.yaml
@@ -42,7 +42,7 @@ github:
     - api
     - syslog
   protected_branches:
-    main: {}
+    #main: {}
     2.x: {}
   # Attempt to make the auto-generated github emails more easily readable in email clients.
   custom_subjects:
