--- a/pom.xml
+++ b/pom.xml
@@ -463,8 +463,8 @@
     <pax-exam.version>4.13.5</pax-exam.version>
     <plexus-utils.version>3.5.0</plexus-utils.version>
     <slf4j.version>1.7.36</slf4j.version>
-    <spring.version>5.3.25</spring.version>
-    <spring-boot.version>2.7.7</spring-boot.version>
+    <spring-boot.version>2.7.9</spring-boot.version>
+    <spring-framework.version>5.3.25</spring-framework.version>
     <system-stubs.version>2.0.2</system-stubs.version>
     <tomcat-juli.version>10.0.23</tomcat-juli.version>
     <velocity.version>1.7</velocity.version>
@@ -545,7 +545,7 @@
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-framework-bom</artifactId>
-        <version>${spring.version}</version>
+        <version>${spring-framework.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
