--- a/pom.xml
+++ b/pom.xml
@@ -246,7 +246,6 @@
     <module>log4j-core-test</module>
     <module>log4j-couchdb</module>
     <module>log4j-docker</module>
-    <module>log4j-flume-ng</module>
     <module>log4j-iostreams</module>
     <module>log4j-jakarta-smtp</module>
     <module>log4j-jakarta-web</module>
@@ -428,7 +427,7 @@
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-flume-ng</artifactId>
-        <version>${project.version}</version>
+        <version>2.23.1</version>
       </dependency>
 
       <dependency>
