--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,8 +30,7 @@ jobs:
 
   build:
     if: github.actor != 'dependabot[bot]'
-    # Temporary use `develocity` branch
-    uses: apache/logging-parent/.github/workflows/build-reusable.yaml@develocity
+    uses: apache/logging-parent/.github/workflows/build-reusable.yaml@rel/11.2.0
     secrets:
       DV_ACCESS_TOKEN: ${{ ! startsWith(github.refname, 'release/') && secrets.GE_ACCESS_TOKEN }}
     with:
@@ -40,12 +39,12 @@ jobs:
         17
       site-enabled: true
       reproducibility-check-enabled: false
-      develocity-enabled: true
+      develocity-enabled: ${{ ! startsWith(github.refname, 'release/') }}
 
   deploy-snapshot:
     needs: build
     if: github.repository == 'apache/logging-log4j2' && github.ref_name == '2.x'
-    uses: apache/logging-parent/.github/workflows/deploy-snapshot-reusable.yaml@rel/11.1.0
+    uses: apache/logging-parent/.github/workflows/deploy-snapshot-reusable.yaml@rel/11.2.0
     # Secrets for deployments
     secrets:
       NEXUS_USERNAME: ${{ secrets.NEXUS_USER }}
@@ -58,7 +57,7 @@ jobs:
   deploy-release:
     needs: build
     if: github.repository == 'apache/logging-log4j2' && startsWith(github.ref_name, 'release/')
-    uses: apache/logging-parent/.github/workflows/deploy-release-reusable.yaml@rel/11.1.0
+    uses: apache/logging-parent/.github/workflows/deploy-release-reusable.yaml@rel/11.2.0
     # Secrets for deployments
     secrets:
       GPG_SECRET_KEY: ${{ secrets.LOGGING_GPG_SECRET_KEY }}
