--- a/pom.xml
+++ b/pom.xml
@@ -302,7 +302,7 @@
   <properties>
 
     <!-- project version -->
-    <revision>2.24.0-SNAPSHOT</revision>
+    <revision>2.24.0</revision>
 
     <!-- =================
          Common properties
@@ -316,7 +316,7 @@
          2. This value is employed in various places while creating the distribution
          To mitigate these, we define a *dummy* value here and let the CI replace it during a release.
          Hence, *DO NOT MANUALLY EDIT THIS VALUE*! -->
-    <project.build.outputTimestamp>2024-03-06T09:31:11Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2024-08-31T18:22:26Z</project.build.outputTimestamp>
 
     <!-- ========================
          Site-specific properties
