--- a/log4j-jdbc-dbcp2/pom.xml
+++ b/log4j-jdbc-dbcp2/pom.xml
@@ -27,7 +27,7 @@
   </parent>
 
   <artifactId>log4j-jdbc-dbcp2</artifactId>
-  <name>Apache Log4j JDBC DBCP 2</name>
+  <name>Apache Log4j JDBC: DBCP 2 datasource</name>
   <description>Connection source for the JDBC Appender using Apache Commons DBCP2.</description>
 
   <properties>
