--- a/pom.xml
+++ b/pom.xml
@@ -244,6 +244,7 @@
     <module>log4j-jctools</module>
     <module>log4j-jdbc</module>
     <module>log4j-jdbc-dbcp2</module>
+    <module>log4j-jdbc-jndi</module>
     <module>log4j-jndi</module>
     <module>log4j-jndi-test</module>
     <module>log4j-jpl</module>
@@ -451,6 +452,12 @@
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-jdbc-dbcp2</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-jdbc-jndi</artifactId>
         <version>${project.version}</version>
       </dependency>
 
