--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,14 +32,14 @@ jobs:
     if: github.actor != 'dependabot[bot]'
     uses: apache/logging-parent/.github/workflows/build-reusable.yaml@rel/11.2.0
     secrets:
-      DV_ACCESS_TOKEN: ${{ ! startsWith(github.refname, 'release/') && secrets.GE_ACCESS_TOKEN }}
+      DV_ACCESS_TOKEN: ${{ ! startsWith(github.ref_name, 'release/') && secrets.GE_ACCESS_TOKEN }}
     with:
       java-version: |
         8
         17
       site-enabled: true
-      reproducibility-check-enabled: false
-      develocity-enabled: ${{ ! startsWith(github.refname, 'release/') }}
+      reproducibility-check-enabled: ${{ startsWith(github.ref_name, 'release/') }}
+      develocity-enabled: ${{ ! startsWith(github.ref_name, 'release/') }}
 
   deploy-snapshot:
     needs: build
