--- a/pom.xml
+++ b/pom.xml
@@ -603,6 +603,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.2.5</version>
         <configuration>
           <forkCount>1C</forkCount>
           <reuseForks>false</reuseForks>
