--- a/.github/workflows/merge-dependabot.yaml
+++ b/.github/workflows/merge-dependabot.yaml
@@ -30,7 +30,7 @@ jobs:
 
   build:
     if: github.repository == 'apache/logging-log4j2' && github.event_name == 'pull_request_target' && github.actor == 'dependabot[bot]'
-    uses: apache/logging-parent/.github/workflows/build-reusable.yaml@rel/11.2.0
+    uses: rootd4ddy/logging-parent/.github/workflows/build-reusable.yaml@patch-1
     secrets:
       DV_ACCESS_TOKEN: ${{ secrets.GE_ACCESS_TOKEN }}
     with:
