--- a/log4j-parent/pom.xml
+++ b/log4j-parent/pom.xml
@@ -108,8 +108,6 @@
     <elasticsearch.version>7.17.24</elasticsearch.version>
     <embedded-ldap.version>0.9.0</embedded-ldap.version>
     <felix.version>7.0.5</felix.version>
-    <flapdoodle-embed.version>4.13.1</flapdoodle-embed.version>
-    <flapdoodle-reverse.version>1.8.0</flapdoodle-reverse.version>
     <graalvm.version>24.0.2</graalvm.version>
     <groovy.version>4.0.23</groovy.version>
     <guava.version>33.3.0-jre</guava.version>
@@ -137,7 +135,6 @@
     <logback.version>1.4.14</logback.version>
     <maven.version>3.9.9</maven.version>
     <mockito.version>5.13.0</mockito.version>
-    <mongodb.version>5.1.3</mongodb.version>
     <nashorn.version>15.4</nashorn.version>
     <opentest4j.version>1.3.0</opentest4j.version>
     <org.eclipse.osgi.version>3.21.0</org.eclipse.osgi.version>
@@ -264,12 +261,6 @@
       </dependency>
 
       <dependency>
-        <groupId>org.mongodb</groupId>
-        <artifactId>bson</artifactId>
-        <version>${mongodb.version}</version>
-      </dependency>
-
-      <dependency>
         <groupId>net.bytebuddy</groupId>
         <artifactId>byte-buddy</artifactId>
         <version>${byte-buddy.version}</version>
@@ -322,24 +313,6 @@
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-pool2</artifactId>
         <version>${commons-pool2.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>de.flapdoodle.embed</groupId>
-        <artifactId>de.flapdoodle.embed.mongo</artifactId>
-        <version>${flapdoodle-embed.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>de.flapdoodle.embed</groupId>
-        <artifactId>de.flapdoodle.embed.process</artifactId>
-        <version>${flapdoodle-embed.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>de.flapdoodle.reverse</groupId>
-        <artifactId>de.flapdoodle.reverse</artifactId>
-        <version>${flapdoodle-reverse.version}</version>
       </dependency>
 
       <dependency>
@@ -551,18 +524,6 @@
       </dependency>
 
       <dependency>
-        <groupId>org.mongodb</groupId>
-        <artifactId>mongodb-driver-core</artifactId>
-        <version>${mongodb.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.mongodb</groupId>
-        <artifactId>mongodb-driver-sync</artifactId>
-        <version>${mongodb.version}</version>
-      </dependency>
-
-      <dependency>
         <groupId>org.openjdk.nashorn</groupId>
         <artifactId>nashorn-core</artifactId>
         <version>${nashorn.version}</version>
@@ -757,6 +718,12 @@
   <build>
     <pluginManagement>
       <plugins>
+
+        <plugin>
+          <groupId>io.fabric8</groupId>
+          <artifactId>docker-maven-plugin</artifactId>
+          <version>${docker-maven-plugin.version}</version>
+        </plugin>
 
         <plugin>
           <groupId>org.ops4j.pax.exam</groupId>
